<resources>
    <string name="app_name">Calculator_v1.0.0</string>
    <string name="button_C">C</string>
    <string name="button_close">&#8656;</string>
    <string name="button_bracket">&#8730;</string>
    <string name="button_percent">%</string>
    <string name="button_del">&#247;</string>
    <string name="button_settings">&#x2746;</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_mul">*</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_min">-</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_plus">+</string>
    <string name="button_char">+/-</string>
    <string name="button_0">0</string>
    <string name="button_dot">.</string>
    <string name="button_equally">=</string>
    <string name="tv_settings_1">Настройки:</string>
    <string name="tv_settings_2">Переключить тему</string>


</resources>