<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation = "vertical"
    tools:context=".MainActivity"
    tools:ignore="ExtraText"
    android:background="@drawable/paper_texture_invoiced_gray_color">

    <LinearLayout android:layout_weight="8"
        style="@style/LinearLayout_type_text_view">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_settings"
                style="@style/ButtonMaterial_type_3"/>
        <TextView
            android:id="@+id/tv_console_result"
            android:gravity="center|left"
            style="@style/TextView_type_text" />

        <TextView
            android:id="@+id/tv_console"
            android:gravity="center|right"
            style="@style/TextView_type_text" />
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_weight="1"
        android:columnCount="4"
        android:rowCount="4">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_C"
            android:textColor="@color/red"
            android:text="@string/button_C"
            style="@style/ButtonMaterial"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_bracket"
            android:text="@string/button_bracket"
            style="@style/ButtonMaterial"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_percent"
            android:text="@string/button_percent"
            style="@style/ButtonMaterial"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_del"
            android:text="@string/button_del"
            style="@style/ButtonMaterial_type_2"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_7"
            android:text="@string/button_7"
            style="@style/ButtonMaterial" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_8"
            android:text="@string/button_8"
            style="@style/ButtonMaterial"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_9"
            android:text="@string/button_9"
            style="@style/ButtonMaterial" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_mul"
            android:text="@string/button_mul"
            style="@style/ButtonMaterial_type_2" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_4"
            android:text="@string/button_4"
            style="@style/ButtonMaterial"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_5"
            android:text="@string/button_5"
            style="@style/ButtonMaterial"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_6"
            android:text="@string/button_6"
            style="@style/ButtonMaterial"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_min"
            android:text="@string/button_min"
            style="@style/ButtonMaterial_type_2" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_1"
            android:text="@string/button_1"
            style="@style/ButtonMaterial"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_2"
            android:text="@string/button_2"
            style="@style/ButtonMaterial"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_3"
            android:text="@string/button_3"
            style="@style/ButtonMaterial"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            android:text="@string/button_plus"
            style="@style/ButtonMaterial_type_2"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_char"
            android:text="@string/button_char"
            style="@style/ButtonMaterial" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_0"
            android:text="@string/button_0"
            style="@style/ButtonMaterial"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_dot"
            android:text="@string/button_dot"
            style="@style/ButtonMaterial"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equally"
            android:text="@string/button_equally"
            style="@style/ButtonMaterial_type_2"/>
    </GridLayout>
</LinearLayout>